ai-sales-assistant/force-app/main/default/objects/Risk_Alert__e/Risk_Alert__e.object-meta.xml
<CustomObject>
    <label>Risk Alert</label>
    <pluralLabel>Risk Alerts</pluralLabel>
    <description>Published by RiskAnalysisService whenever an opportunity newly crosses into High risk.</description>
</CustomObject>