ai-sales-assistant/force-app/main/default/objects/Risk_Alert__e/fields/Message__c.field-meta.xml
<CustomField>
    <fullName>Message__c</fullName>
    <label>Message</label>
    <length>500</length>
    <type>Text</type>
</CustomField>