ai-sales-assistant/force-app/main/default/objects/Risk_Alert__e/fields/Opportunity_Id__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Id__c</fullName>
    <label>Opportunity Id</label>
    <length>18</length>
    <required>true</required>
    <type>Text</type>
</CustomField>